Fix collapsing in Bootstrap/JQuery asset load order

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -743,7 +743,7 @@ ul.tag-cloud li {
   height: 100px;
  }
 .navbar-inverse .navbar-nav {
-  margin-top: 40px;
+  margin-top: 20px;
   font-size: 16px;
 }
 .navbar-inverse .navbar-nav > li > a {
